# write-a-hash-table

./: .gitignore  CMakeLists.txt  Makefile
src/: hash_table.c  hash_table.h  main.c  prime.c  prime.h
